links: prevent wrapping of icons before internal/external links, fixes #4855
git-svn-id: svn://develop.studip.de/studip/trunk@31884 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/links.less
+++ b/public/assets/stylesheets/less/links.less
@@ -22,6 +22,10 @@ a:hover.toolbar {
     color: #eee;
 }
 
+a.link-intern, a.link-extern {
+    white-space: nowrap;
+}
+
 a.link-intern {
     .icon-before('blue/link-intern.png', 16, 2px);
 }
